Add platforms collection and populate swagger.json with its endpoints
